message Entrypoint {
    required uint32 node = 1;
    required uint32 eof_pos = 2;
}
message Block {
    repeated uint32 nodes = 1;
}

message ExtraData {
    required string meta = 1;
    required string data = 2;
}
