syntax = "proto2";

option optimize_for = LITE_RUNTIME;

package cst.operators;

enum UnaryOpType {
    INVALID_UOP = 0;
    // Prefix
    POS = 1; NEG = 2;
    LOGINV = 3; BITINV = 4;
    // Postfix
    INC = 5; DEC = 6;
}
enum BinaryOpType {
    INVALID_BOP = 0;
    // Arithmetic
    ADD = 7; SUB = 8; MULT = 9; MMUL = 10; DIV = 11; MOD = 12; POW = 13;
    // Comparison and logic
    EQ = 14; NE = 15; IS = 16; ISNT = 17; LT = 18; LE = 19; GT = 20; GE = 21;
    NULLCOALESCING = 22;
    LOCAND = 23; LOGOR = 24; LOGXOR = 25;
    // Bitwise
    BITAND = 26; BITOR = 27; BITXOR = 28;
    LSHIFT = 29; RSHIFT = 30;
}
enum TernaryOpType {
    INVALID_TOP = 0;
    CONDITIONAL = 31;
}

message UnaryOp {
    required UnaryOpType op = 1;
    required uint32 target = 2;
}

message BinaryOp {
    required BinaryOpType op = 1;
    required uint32 left = 2;
    required uint32 right = 3;
}

message TernaryOp {
    required TernaryOpType op = 1;
    required uint32 a = 2;
    required uint32 b = 3;
    required uint32 c = 4;
}
