syntax = "proto2";

option optimize_for = LITE_RUNTIME;

package cst.types;

message Type {
    required uint32 top = 1;
    required uint32 sub = 2 [default = 0];
}

message EnumMember {
    required uint32 name = 1;
    required uint32 val = 2 [default = 0];
}
message StructMember {
    required uint32 type = 1;
    required uint32 name = 2;
    required uint32 val = 3;
}
message ClassMember {
    oneof val {
        StructMember member = 1;
        uint32 method = 2;
    };
    required bool is_static = 3 [default = false];
}

message Enum {
    required uint32 name = 1;
    required uint32 extends = 2  [default = 0];
    repeated EnumMember members = 3;
}
message Struct {
    required uint32 name = 1;
    required uint32 extends = 2 [default = 0];
    repeated StructMember members = 3;
}
message StructEnum {
    required uint32 name = 1;
    required uint32 extends = 2 [default = 0];
    repeated uint32 members = 3;
}
message Class {
    required uint32 name = 1;
    required uint32 extends = 2 [default = 0];
    repeated ClassMember members = 3;
}
